assets/style/header.scss
$navbar-main-text-color: #87bb40;
$navbar-dropdown-text-color: #fff;

$navbar-social-highlighted: lighten($navbar-main-text-color, 20%);

$navbar-menu-background-light: rgba(135, 187, 64, .75);
$navbar-menu-background-dark: transparentize($navbar-main-text-color, 0.5);

header {
    &.full-bg {
        position: relative;
        background-size: cover;
        -webkit-transition: all 0.2s ease-out;
        -moz-transition: all 0.2s ease-out;
        transition: all 0.2s ease-out;
        z-index: 2;

        .home-carousel {
            background: none;
        }

        .navbar-default {
            background: transparent;
        }

        .dark-mask {
            opacity: 0.9;
            //filter: alpha(opacity=90);
            background: $main-background-color;
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
        }

    }
}

.navbar-nav {
    margin-bottom: 0;
}

.collapsing {
    -webkit-transition: none !important;
    transition: none !important;
    display: none !important;
}

.navbar {
    font-family: 'Oswald', "Helvetica Neue", sans-serif !important;

    &-affixed-top.affix {
        .navbar-default {
            background-color: #ffffff;
        }
    }

    /* change navbar style */
    ul {
        &.nav {
            > li {
                > a {
                    color: $navbar-dropdown-text-color;
                    text-decoration: none;
                    border-bottom: solid 4px transparent;
                    border-top: 0 none;

                    &:hover {
                        border-top: 0 none;
                        border-bottom: 4px solid $navbar-main-text-color;
                    }
                }

                &.open > a, &active > a {
                    color: $navbar-dropdown-text-color;
                    text-decoration: none !important;
                    border-top: 0 none;
                    border-bottom: 4px solid $navbar-main-text-color;
                }
            }
        }
    }

    &-default {
        .navbar {
            &-nav {
                > li {
                    > a {
                        &:focus, :hover {
                            //color: #ffffff;
                            background-color: $navbar-menu-background-light;
                            border-bottom: 4px solid $navbar-main-text-color;
                        }
                    }
                }
            }
        }
    }
}


.affix-top .navbar-default .navbar-nav > li > a {
    &:focus, &:hover {
        color: #FFFFFF;
    }
}

.affix .navbar-default .navbar-nav > li > a {
    &:focus, :hover {
        color: $navbar-dropdown-text-color;
    }
}

.navbar-default .navbar-nav > {
    .active, .open {
        > a, > a:hover, > a:focus {
            color: #ffffff;
            background-color: $navbar-menu-background-light;
            border-bottom: 4px solid $navbar-main-text-color;
        }
    }
}

.dropdown-menu {
    background-color: $navbar-main-text-color;
    border: 0 none;
}

.navbar ul.dropdown-menu li {
    border-bottom-color: #102d50;
}

.navbar ul.dropdown-menu li:last-child {
    border-bottom: 0 none;
}

.navbar ul.dropdown-menu li:hover {
    background-color: #21424e;
}

.navbar ul.dropdown-menu li a {
    color: #fff;
}

.navbar ul.dropdown-menu li a:hover {
    color: #fff;
    right: 0;
}

div#navigation {
    &.navbar-collapse {
        &.collapse {
            ul.nav.navbar-nav.navbar-right li.dropdown a {
                font-weight: normal;
            }
        }
    }
}

.collapse.in {
    position: absolute;
    right: 0;
    min-width: 200px;
    background-color: $navbar-menu-background-light;
}

.topbar-socials {
    padding: 0;
    margin: 0;
    opacity: 1;
    line-height: $main-menu-height;

    a {
        color: $navbar-main-text-color;

        > i:hover {
            color: $navbar-social-highlighted;
        }
    }
}

.navbar {
    &-buttons {
        .topbar-socials {
            display: none;
        }
    }

    &-nav {
        .topbar-socials {
            display: inline-block;
        }

        &.navbar-right {
            &:last-child {
                margin-left: -15px;
            }
        }
    }
}

nav > li > a {
    padding: 10px 15px;
}


.btn-template-main {
    color: $navbar-main-text-color;

    &:active {
        background-color: $navbar-menu-background-dark;
    }
}

.navbar-default .navbar-toggle {
    &:hover, &:focus {
        background-color: $navbar-menu-background-dark;
    }
}


/*****************************/
/******* XL BREAKPOINT *******/
/*****************************/

@media screen and (max-width: $xl-breakpoint) {
}

/*****************************/
/******* LG BREAKPOINT *******/
/*****************************/

@media (max-width: $lg-breakpoint) {
    .navbar {
        &-buttons {
            display: flex;
            align-items: center;

            .topbar-socials {
                display: inline-block;
            }
        }

        &-nav {
            .topbar-socials {
                display: none;
            }

            &.navbar-right {
                &:last-child {
                    margin-left: -15px;
                    //margin-bottom: $main-menu-height;
                }
            }
        }

        &-fixed, &-affixed {
            &-top, &-bottom {
                .navbar-collapse {
                    max-height: initial;
                }
            }
        }
    }
    .navbar {
        .navbar-buttons button {
            margin-left: 30px;
        }
    }
}

/*****************************/
/******* MD BREAKPOINT *******/
/*****************************/

@media (max-width: $md-breakpoint) {

    .affix-top .navbar-default .navbar-nav > li > a {
        &:focus, &:hover {
            color: #555;
        }
    }

    .navbar {
        &-nav {
            &.navbar-right {
                &:last-child {
                    margin-left: -15px;
                }
            }
        }

        ul.dropdown-menu li {
            border-top: 0;

            &:hover {
                background-color: $navbar-menu-background-light;
                border-bottom: 4px solid $navbar-main-text-color;
            }
        }
        &-header {
            .oss-logo {
                max-width: 90px;
            }
        }

        .navbar {
            &-buttons {
                button {
                    margin-left: 5px;
                }
            }
        }
    }

    .navbar-default .navbar-nav .open .dropdown-menu > li > a {
        color: $navbar-dropdown-text-color;

        &:hover {
            color: $navbar-dropdown-text-color;
        }
    }
}

